# ghostpad

./: .gitignore  Cargo.toml  GEMINI.md  LICENSE  README.md  SPEC.md  ci_log.txt
.cargo/: config.toml
.github/workflows/: appimage.yml  ci.yml
data/: com.ghostpad.Ghostpad.desktop  com.wispnote.Wispnote.desktop
src/: app.rs  document.rs  main.rs  paths.rs  settings.rs  state_store.rs
src/app/: autosave.rs  completion.rs  mod.rs  preferences.rs  recent.rs  recovery.rs  search.rs  window.rs
src/llm/: huggingface.rs  llamacpp.rs  mod.rs
tests/: llama_backend_smoke.rs
