[package]
name = "wispnote"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
directories = "5.0"
env_logger = "0.11"
gio = "0.20"
glib = "0.20"
gtk4 = { version = "0.10", package = "gtk4" }
libadwaita = { version = "0.8", package = "libadwaita", features = ["v1_4"] }
llama-cpp-2 = { version = "0.1", features = ["vulkan"] }
log = "0.4"
once_cell = "1.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sourceview5 = "0.10"
toml = "0.8"
ureq = "2.10"
uuid = { version = "1.10", features = ["v4"] }
sha2 = "0.10"

[dev-dependencies]
tempfile = "3.10"
